# frozenkrill

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  Release.md  deny.toml  flake.nix
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: main.yml  security.yml  tag.yml
docs/: duress.md  hw.md  keyfiles.md  security.md  technical.md
frozenkrill-core/: Cargo.toml
frozenkrill-core/src/: compression.rs  custom_logger.rs  encryption.rs  key_derivation.rs  lib.rs  mnemonic_utils.rs  psbt.rs  random_generation_utils.rs  slip132.rs  utils.rs  wallet_description.rs  wallet_export.rs
frozenkrill-core/src/encoding/: mod.rs  wallet.rs
frozenkrill-core/tests/: integration.rs
keys/: dr.asc
resources/tests/: 73C5DA0A_coldcard-generic-export.json
src/: custom_logger.rs  main.rs  progress_bar.rs
src/commands/: batch_generate_export.rs  export_public_info.rs  mod.rs  psbt.rs  reencode.rs  show_receiving_qr_code.rs  show_secrets.rs
src/commands/common/: mod.rs  multisig.rs  singlesig.rs
src/commands/generate/: core.rs  mod.rs
src/commands/interactive/: generate_batch.rs  generate_one.rs  generate_single.rs  mod.rs
src/commands/interactive/open/: export_public_info.rs  mod.rs  reencode.rs  show_receiving_qr_code.rs  show_secrets.rs  sign_psbt.rs
tests/: cli_tests.rs
