[package]
name = "frozenkrill"
version = "0.0.0"
edition = "2021"
license = "MIT"

[workspace]
members = ["frozenkrill-core"]

[dependencies]
base32 = "0.5"
clap = { version = "4", features = ["derive", "env"] }
const_format = "0.2"
current_platform = "0.2"
dialoguer = { git = "https://github.com/galtland/dialoguer", branch = "master", features = [
    "fuzzy-select",
] }
frozenkrill-core = { path = "./frozenkrill-core" }
indicatif = "0.17"
mockall = "0.13"
path-absolutize = "3"
qr2term = "0.3"
serde = { version = "1", features = ["derive"] }
termimad = "0.26"
zxcvbn = "3"
expectrl = { version = "0.7", optional = true }

[features]
default = []
cli_tests = ["expectrl"]

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3.21"

[profile.release]
strip = true
opt-level = 3

[profile.release.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
