[package]
name = "frozenkrill-core"
version = "0.0.0"
edition = "2021"

[dependencies]
alkali = "0.3"
anyhow = { version = "1", features = ["backtrace"] }
bip39 = { git = "https://github.com/rust-bitcoin/rust-bip39", features = [
    "rand",
    "zeroize",
] }
bitcoin = "0.29"
# bitcoin_scripts = "0.10"
blake3 = { version = "1", features = ["rayon"] }
env_logger = "0.10"
flate2 = "1"
hex = "0.4"
itertools = "0.10"
log = "0.4"
miniscript = "9.0.2"
once_cell = "1"
# psbt = { version = "0.10.0", features = ["sign"] }
# psbt = { git = "https://github.com/galtland/descriptor-wallet", branch = "master", features = [
#     "sign",
# ] }
psbt = { path = "../../descriptor-wallet/psbt", features = ["sign"] }
rand = "0.8"
rand_core = "0.6"
rayon = "1.6"
regex = "1"
secp256k1 = { version = "0.24.3", features = ["rand-std"] }
secrecy = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
slip132 = "0.9.0"
thiserror = "1"
walkdir = "2"
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
argon2 = { version = "0.4", features = ["zeroize"] }
chacha20poly1305 = "0.10"
mockall = "0.11"
orion = "0.17"
pretty_assertions = "1"
rargon2 = { version = "1", package = "rust-argon2" }
tempdir = "0.3"
