[package]
name = "frozenkrill-core"
version = "0.0.0"
edition = "2021"
license = "MIT"

[dependencies]
alkali = "0.3"
libsodium-sys-stable = "1.21.1"
anyhow = { version = "1", features = ["backtrace"] }
bip39 = { git = "https://github.com/rust-bitcoin/rust-bip39", features = [
    "rand",
    "zeroize",
] }
bitcoin = "0.32"
blake3 = { version = "1", features = ["rayon"] }
env_logger = "0.10"
flate2 = "1"
hex = "0.4"
itertools = "0.13"
log = "0.4"
miniscript = "12"
once_cell = "1"
rand = "0.8"
rand_core = "0.6"
rayon = "1.10"
regex = "1"
secp256k1 = { version = "0.29", features = ["rand-std"] }
secrecy = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
walkdir = "2"
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
argon2 = { version = "0.5", features = ["zeroize"] }
chacha20poly1305 = "0.10"
mockall = "0.13"
orion = "0.17"
pretty_assertions = "1"
rargon2 = { version = "2", package = "rust-argon2" }
tempfile = "3.20"
